# POROUS-AIRFOILS-LBM-PALABOS

./: .gitignore  CMakeLists.txt
IRP/: CMakeLists.txt  LICENSE  NACA0012Palabos.cpp  README.md  plot_results.py
